2005-07-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicListUI.java:
	(KeyHandler.keyPressed): Ensure the new lead selection index is visible
	after making a change.
	(MouseInputHandler.mouseClicked): Likewise.

2005-07-27  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/util/PacketProcessor.java: Implement 
	PrivilegedAction to allow privilaged operations.

2005-07-27  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/events/events.wml: Add old and upcomming events.

2005-07-27  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/util/Value.java: Class to read/write JDWP
	untagged values and tagged values.
	* gnu/classpath/jdwp/processor/ObjectReferenceCommandSet.java:
	use new api for Values and IVirtualMachine and fix message in
	exception.
	* gnu/classpath/jdwp/processor/ReferenceTypeCommandSet.java:
	use new api for Values and fix message in exception.

2005-07-27  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/POAHelper.java (type, insert, extract, 
        id, read, write): New methods.

2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedString.java: added/edited API docs.
	
2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedString.java: reformatted.
	
2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java:
	Reformatted file to match our coding style.

2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java
	(getCharacterAttributes): Return SimpleAttributeSet.EMPTY instead
	of null.

2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicPanelUI.java
	(installDefaults): Install background color on JPanel.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added background color for Panel.

2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedCharacterIterator.java: API doc fixes.
	