@@ -55,129 +55,102 @@ import java.util.Set;
 class AttributedStringIterator implements AttributedCharacterIterator
 {
 
-/*************************************************************************/
+  /*************************************************************************/
 
-/**
-  * Instance Variables
-  */
+  /** The character iterator containing the text */
+  private CharacterIterator ci;
 
-/**
-  * The character iterator containing the text
-  */
-private CharacterIterator ci;
+  /** The list of attributes and ranges */
+  private AttributedString.AttributeRange[] attribs;
 
-/**
-  * The list of attributes and ranges
-  */
-private AttributedString.AttributeRange[] attribs;
+  /**
+   * The list of attributes that the user is interested in.  We may,
+   * at our option, not return any other attributes.
+   */
+  private AttributedCharacterIterator.Attribute[] restricts;
 
-/**
-  * The list of attributes that the user is interested in.  We may,
-  * at our option, not return any other attributes.
-  */
-private AttributedCharacterIterator.Attribute[] restricts;
+  /*************************************************************************/
 
-/*************************************************************************/
+  AttributedStringIterator(StringCharacterIterator sci, 
+                           AttributedString.AttributeRange[] attribs,
+                           int begin_index, int end_index,
+                           AttributedCharacterIterator.Attribute[] restricts)
+  {
+    this.ci = new StringCharacterIterator(sci, begin_index, end_index);
+    this.attribs = attribs;
+    this.restricts = restricts;
+  }
 
-/*
- * Constructors
- */
+  /*************************************************************************/
 
-AttributedStringIterator(StringCharacterIterator sci, 
-                         AttributedString.AttributeRange[] attribs,
-                         int begin_index, int end_index,
-                         AttributedCharacterIterator.Attribute[] restricts)
-{
-  this.ci = new StringCharacterIterator(sci, begin_index, end_index);
-  this.attribs = attribs;
-  this.restricts = restricts;
-}
+  // First we have a bunch of stupid redirects.  If StringCharacterIterator
+  // weren't final, I just would have extended that for this class.  Alas, no.
 
-/*************************************************************************/
+  public Object clone()
+  {
+    return(ci.clone());
+  }
 
-/*
- * Instance Methods
- */
+  public char current()
+  {
+    return(ci.current());
+  }
 
-// First we have a bunch of stupid redirects.  If StringCharacterIterator
-// weren't final, I just would have extended that for this class.  Alas, no.
+  public char next()
+  {
+    return(ci.next());
+  }
 
-public Object
-clone()
-{
-  return(ci.clone());
-}
+  public char previous()
+  {
+    return(ci.previous());
+  }
 
-public char
-current()
-{
-  return(ci.current());
-}
+  public char first()
+  {
+    return(ci.first());
+  }
 
-public char
-next()
-{
-  return(ci.next());
-}
+  public char last()
+  {
+    return(ci.last());
+  }
 
-public char
-previous()
-{
-  return(ci.previous());
-}
+  public int getIndex()
+  {
+    return(ci.getIndex());
+  }
 
-public char
-first()
-{
-  return(ci.first());
-}
+  public char setIndex(int index)
+  {
+    return(ci.setIndex(index));  
+  }
 
-public char
-last()
-{
-  return(ci.last());
-}
+  public int getBeginIndex()
+  {
+    return(ci.getBeginIndex());
+  }
 
-public int
-getIndex()
-{
-  return(ci.getIndex());
-}
+  public int getEndIndex()
+  {
+    return(ci.getEndIndex());
+  }
 
-public char
-setIndex(int index)
-{
-  return(ci.setIndex(index));
-}
+  /*
+   * Here is where the AttributedCharacterIterator methods start.
+   */ 
 
-public int
-getBeginIndex()
-{
-  return(ci.getBeginIndex());
-}
+  /*************************************************************************/
 
-public int
-getEndIndex()
-{
-  return(ci.getEndIndex());
-}
-
-/*
- * Here is where the AttributedCharacterIterator methods start.
- */ 
-
-/*************************************************************************/
-
-/**
-  * Returns a list of all the attribute keys that are defined anywhere
-  * on this string.
-  */
-public Set
-getAllAttributeKeys()
-{
-  HashSet s = new HashSet();
-  if (attribs == null)
-    return(s);
+  /**
+   * Returns a list of all the attribute keys that are defined anywhere
+   * on this string.
+   */
+  public Set getAllAttributeKeys()
+  {
+    HashSet s = new HashSet();
+    if (attribs == null)
+      return(s);
 
     for (int i = 0; i < attribs.length; i++)
     {
@@ -193,156 +166,146 @@ getAllAttributeKeys()
         }
     }
 
-  return(s);
-}
+    return(s);
+  }
 
-/*************************************************************************/
+  /*************************************************************************/
 
-/**
-  * Various methods that determine how far the run extends for various
-  * attribute combinations.
-  */
+  /**
+   * Various methods that determine how far the run extends for various
+   * attribute combinations.
+   */
 
-public int
-getRunLimit()
-{
-  return(getRunLimit(getAttributes().keySet()));
-}
+  public int getRunLimit()
+  {
+    return(getRunLimit(getAttributes().keySet()));
+  }
 
-public int
-getRunLimit(AttributedCharacterIterator.Attribute attrib)
-{
-  HashSet s = new HashSet();
-  s.add(attrib);
+  public int getRunLimit(AttributedCharacterIterator.Attribute attrib)
+  {
+    HashSet s = new HashSet();
+    s.add(attrib);
+    return(getRunLimit(s));
+  }
 
-  return(getRunLimit(s));
-}
+  public synchronized int getRunLimit(Set attribute_set)
+  {
+    boolean hit = false;
+    int runLimit = ci.getEndIndex ();
+    int pos = ci.getIndex ();
 
-public synchronized int
-getRunLimit(Set attribute_set)
-{
-  boolean hit = false;
-  int runLimit = ci.getEndIndex ();
-  int pos = ci.getIndex ();
+    for (int i = 0; i < attribs.length; ++i)
+      {
+        if (pos >= attribs[i].begin_index &&
+            pos < attribs[i].end_index)
+          {
+            Iterator iter = attribute_set.iterator();
+            while(iter.hasNext()) 
+              if (attribs[i].attribs.containsKey(iter.next()))
+                {
+                  hit = true;
+                  runLimit = Math.min(runLimit, attribs[i].end_index);
+                }
+          }
+      }
+    if (hit)
+      return runLimit;
+    else
+      return ci.getEndIndex();
+  }
 
-  for (int i = 0; i < attribs.length; ++i)
-    {
-      if (pos >= attribs[i].begin_index &&
-          pos < attribs[i].end_index)
-        {
-          Iterator iter = attribute_set.iterator();
-          while(iter.hasNext()) 
-            if (attribs[i].attribs.containsKey(iter.next()))
-              {
-                hit = true;
-                runLimit = Math.min(runLimit, attribs[i].end_index);
-              }
-        }
-    }
-  if (hit)
-    return runLimit;
-  else
-    return ci.getEndIndex();
-}
+  /*************************************************************************/
 
-/*************************************************************************/
+  /**
+   * Various methods that determine where the run begins for various
+   * attribute combinations.
+   */
 
-/**
-  * Various methods that determine where the run begins for various
-  * attribute combinations.
-  */
+  public int getRunStart()
+  {
+    return(getRunStart(getAttributes().keySet()));
+  }
 
-public int
-getRunStart()
-{
-  return(getRunStart(getAttributes().keySet()));
-}
+  public int getRunStart(AttributedCharacterIterator.Attribute attrib)
+  {
+    HashSet s = new HashSet();
+    s.add(attrib);
 
-public int
-getRunStart(AttributedCharacterIterator.Attribute attrib)
-{
-  HashSet s = new HashSet();
-  s.add(attrib);
+    return(getRunStart(s));
+  }
 
-  return(getRunStart(s));
-}
+  public int getRunStart(Set attribute_set)
+  {
+    boolean hit = false;
+    int runBegin = 0;
+    int pos = ci.getIndex();
 
-public int
-getRunStart(Set attribute_set)
-{
-  boolean hit = false;
-  int runBegin = 0;
-  int pos = ci.getIndex ();
+    for (int i = 0; i < attribs.length; ++i)
+      {
+        if (pos >= attribs[i].begin_index &&
+            pos <= attribs[i].end_index)
+          {
+            Iterator iter = attribute_set.iterator();
+            while(iter.hasNext()) 
+              if (attribs[i].attribs.containsKey(iter.next()))
+                {
+                  hit = true;
+                  runBegin = Math.max(runBegin, attribs[i].begin_index);
+                }
+          }
+      }
+    if (hit)
+      return runBegin;
+    else
+      return -1;
+  }
 
-  for (int i = 0; i < attribs.length; ++i)
-    {
-      if (pos >= attribs[i].begin_index &&
-          pos <= attribs[i].end_index)
-        {
-          Iterator iter = attribute_set.iterator();
-          while(iter.hasNext()) 
-            if (attribs[i].attribs.containsKey(iter.next()))
-              {
-                hit = true;
-                runBegin = Math.max(runBegin, attribs[i].begin_index);
-              }
-        }
-    }
-  if (hit)
-    return runBegin;
-  else
-    return -1;
-}
+  /*************************************************************************/
 
-/*************************************************************************/
+  public Object getAttribute(AttributedCharacterIterator.Attribute attrib)
+  {
+    if (attribs == null)
+      return(null);
 
-public Object
-getAttribute(AttributedCharacterIterator.Attribute attrib)
-{
-  if (attribs == null)
+    for (int i = 0; i < attribs.length; i++)
+      {
+        Set key_set = attribs[i].attribs.keySet();
+        Iterator iter = key_set.iterator();
+        while (iter.hasNext())
+          {
+            Object obj = iter.next();
+
+            // Check for attribute match and range match
+            if (obj.equals(attrib))
+              if ((ci.getIndex() >= attribs[i].begin_index) &&
+                  (ci.getIndex() < attribs[i].end_index))
+                return(attribs[i].attribs.get(obj));
+          }
+      }
+
     return(null);
+  }
 
-  for (int i = 0; i < attribs.length; i++)
-    {
-      Set key_set = attribs[i].attribs.keySet();
-      Iterator iter = key_set.iterator();
-      while (iter.hasNext())
-        {
-          Object obj = iter.next();
+  /*************************************************************************/
 
-          // Check for attribute match and range match
-          if (obj.equals(attrib))
-            if ((ci.getIndex() >= attribs[i].begin_index) &&
-                (ci.getIndex() < attribs[i].end_index))
-              return(attribs[i].attribs.get(obj));
-        }
-    }
-
-  return(null);
-}
-
-/*************************************************************************/
-
-/**
-  * Return a list of all the attributes and values defined for this
-  * character
-  */
-public Map
-getAttributes()
-{
-  HashMap m = new HashMap();
-  if (attribs == null)
-    return(m);
+  /**
+   * Return a list of all the attributes and values defined for this
+   * character
+   */
+  public Map getAttributes()
+  {
+    HashMap m = new HashMap();
+    if (attribs == null)
+      return(m);
   
-  for (int i = 0; i < attribs.length; i++)
-    {
-       if ((ci.getIndex() >= attribs[i].begin_index) &&
-           (ci.getIndex() < attribs[i].end_index))
-         m.putAll(attribs[i].attribs);
-    }
+    for (int i = 0; i < attribs.length; i++)
+      {
+         if ((ci.getIndex() >= attribs[i].begin_index) &&
+             (ci.getIndex() < attribs[i].end_index))
+           m.putAll(attribs[i].attribs);
+      }
 
-  return(m);
-}
+    return(m);
+  }
 
 } // class AttributedStringIterator
-
